Fix for Mantis 868 Hovering help text is overlapped by mouse cursor.

--- a/styles/sitbase.css
+++ b/styles/sitbase.css
@@ -480,6 +480,8 @@ p.trigger
     position: absolute;
   /*top: 20px;*/
   /* left: -10px; */
+  margin-left: 16px;
+  margin-top: 8px;
   width: 125px;
   padding: 5px;
   z-index: 100;
